added material-ui to the app. added dynamic state ability to events and groups

--- a/src/Containers/Dashboard/Dashboard.module.css
+++ b/src/Containers/Dashboard/Dashboard.module.css
@@ -1,4 +1,7 @@
 .Dashboard{
     background-color: pink;
-    width:80%;
+    width:80vw;
+    position: relative;
+    overflow: scroll;
+    padding:25px;
 }
