--- a/src/Components/UI/TopBar/TopBar.module.css
+++ b/src/Components/UI/TopBar/TopBar.module.css
@@ -1,6 +1,6 @@
 .TopBar{
     background-color:red;
-    height:60px;
+    height:10vh;
     width:100%;
     display:flex;
     justify-content: space-between;
