--- a/src/Containers/Dashboard/Dashboard.module.css
+++ b/src/Containers/Dashboard/Dashboard.module.css
@@ -8,11 +8,16 @@
     box-shadow: inset 4px 17px 76px -30px rgba(0,0,0,0.75);
 }
 .AddEventButton{
-    background-color: rgba(73, 212, 157, 1) !important;
+    /* background-color: rgba(73, 212, 157, 1) !important; */
     position: fixed !important;
     bottom:45px;
     right:45px;
+    background: #40F281;
+    background: linear-gradient(0deg, rgb(108, 175, 144), rgb(73, 212, 157)) !important;
 }
 .Tooltip{
     font-size: 15px;
+}
+.AppBar{
+    margin-bottom: 20px;
 }
