--- a/src/Containers/Dashboard/Dashboard.module.css
+++ b/src/Containers/Dashboard/Dashboard.module.css
@@ -2,7 +2,7 @@
     background-color: #f4f4f6;
     width:80vw;
     position: relative;
-    overflow: scroll;
+    overflow-y: scroll;
     padding:25px;
     z-index: 125;
     box-shadow: inset 4px 17px 76px -30px rgba(0,0,0,0.75);
