--- a/src/Containers/Dashboard/Dashboard.module.css
+++ b/src/Containers/Dashboard/Dashboard.module.css
@@ -1,6 +1,6 @@
 .Dashboard{
     background-color: #f4f4f6;
-    width:80vw;
+    width:100%;
     position: relative;
     overflow-y: scroll;
     padding:25px;
