--- a/src/Components/UI/SideBar/SideBar.module.scss
+++ b/src/Components/UI/SideBar/SideBar.module.scss
@@ -6,6 +6,17 @@
     z-index: 150; 
     transition: all .5s;
 }
+.MobileSideBar{
+    width:0vw;
+    position: absolute;
+    overflow: hidden;
+    background-color: #e8f1f2;
+    z-index: 150; 
+    transition: all .5s;
+    height:100%;
+    top:1;
+    padding-top:3px;
+}
 .Groups{
     height:93%;
     overflow-y: scroll;
@@ -31,4 +42,16 @@
 }
 .Open{
     width:20vw;
+}
+.MobileOpen{
+    width:50vw;
+}
+.MobileOverlay{
+    width: 100%;
+    height: 100%;
+    z-index: 90;
+    position: absolute;
+    background: rgba(0,0,0,0.25);
+    top:0;
+    left:0;
 }
