--- a/src/Containers/Authentification/Login.module.scss
+++ b/src/Containers/Authentification/Login.module.scss
@@ -5,7 +5,7 @@
    height:100vh;
    width:100vw;
 }
-.loginGrid{
+.loginGridContainer{
    text-align: center;
    background: rgba(0,0,0,0.5);
 }
@@ -28,5 +28,16 @@
 }
 
 @media screen and (max-width: 812px){
-   
+   .loginPaper{
+      padding:10px;
+   }
+   .LoginButton{
+      margin: 10px 5px !important;
+   }
+   .SignupButton{
+      margin: 10px 5px !important;
+   }
+   .loginGrid{
+     max-width:80% !important;
+   }
 }
