mobile sidebar fix

--- a/src/Components/UI/SideBar/SideBar.module.scss
+++ b/src/Components/UI/SideBar/SideBar.module.scss
@@ -14,8 +14,7 @@
     z-index: 150; 
     transition: all .5s;
     height:100%;
-    top:1;
-    padding-top:3px;
+    top:0px;
 }
 .Groups{
     height:93%;
