--- a/src/Containers/Dashboard/Dashboard.module.css
+++ b/src/Containers/Dashboard/Dashboard.module.css
@@ -23,6 +23,7 @@
 }
 .grow{
     flex-grow: 1;
+    margin: 12px 0px;
 }
 .MemberCount{
     width:100%;
@@ -32,5 +33,5 @@
     margin:10px!important;
 }
 @media only screen and (max-width: 812px){
-    .grow{font-size: 25px;}
+    .grow{font-size: 25px; }
 }
