--- a/src/Components/UI/Events/Event/Event.module.scss
+++ b/src/Components/UI/Events/Event/Event.module.scss
@@ -129,7 +129,7 @@ h1 {
     position: absolute;
     bottom: 0;
     width: 100%;
-    transform: translateY(calc(110px + 1em));
+    transform: translateY(calc(105px + 1em));
     transition: transform 0.3s;
     .content {
       padding: 1em;
@@ -295,6 +295,7 @@ h1 {
   }
 }
 .mobilemenucontent {
+  box-shadow: 0 0px 38px rgba($black, 0.3), 0 7px 12px rgba($black, 0.2);
     li {
       width: 33.333333%;
       float: left;
