remove text from event images -- add gradient background to dash placeholder

--- a/src/Components/UI/Events/Event/Event.module.scss
+++ b/src/Components/UI/Events/Event/Event.module.scss
@@ -352,14 +352,14 @@ h1 {
 .Lavendar{background-color: $lavendar;}
 .Royal{background-color: $regal-blue;}
 
-.Birthday{background: url('../../../../Assets/images/Birthday.png') center center / cover no-repeat;}
-.Entertainment{background: url('../../../../Assets/images/Entertainment.png') center center / cover no-repeat;}
-.FoodDrink{background: url('../../../../Assets/images/Food&Drink.png') center center / cover no-repeat;}
-.GameNight{background: url('../../../../Assets/images/GameNight.png') center center / cover no-repeat;}
-.Meetup{background: url('../../../../Assets/images/Meetup.png') center center / cover no-repeat;}
-.Outdoors{background: url('../../../../Assets/images/Outdoors.png') center center / cover no-repeat;}
-.Party{background: url('../../../../Assets/images/Party.png') center center / cover no-repeat;}
-.Travel{background: url('../../../../Assets/images/Travel.png') center center / cover no-repeat;}
+.Birthday{background: url('../../../../Assets/images/NoText/Birthday.png') center center / cover no-repeat;}
+.Entertainment{background: url('../../../../Assets/images/NoText/Entertainment.png') center center / cover no-repeat;}
+.FoodDrink{background: url('../../../../Assets/images/NoText/Food&Drink.png') center center / cover no-repeat;}
+.GameNight{background: url('../../../../Assets/images/NoText/GameNight.png') center center / cover no-repeat;}
+.Meetup{background: url('../../../../Assets/images/NoText/Meetup.png') center center / cover no-repeat;}
+.Outdoors{background: url('../../../../Assets/images/NoText/Outdoors.png') center center / cover no-repeat;}
+.Party{background: url('../../../../Assets/images/NoText/Party.png') center center / cover no-repeat;}
+.Travel{background: url('../../../../Assets/images/NoText/Travel.png') center center / cover no-repeat;}
 
 
 @media only screen and (max-width: 812px){
