--- a/src/Components/UI/TopBar/TopBar.module.scss
+++ b/src/Components/UI/TopBar/TopBar.module.scss
@@ -1,5 +1,6 @@
+$FreshBlue: #4ABDAC;
 .TopBar{
-    background-color:#49d49d;
+    background-color:$FreshBlue;
     height:10vh;
     width:100%;
     display:flex;
