--- a/src/Components/Layout/Layout.module.scss
+++ b/src/Components/Layout/Layout.module.scss
@@ -1,3 +1,5 @@
+$FreshBlue: #4ABDAC;
+$CleanWhite: #DFDCE3;
 .FullApp{
     height: 100%;
     max-height: 100%;
@@ -7,7 +9,7 @@
     position: relative;
     height:90vh;
     width:100%;
-    background-color: chocolate;
+    background-color: $CleanWhite;
     display:flex;
     z-index:135;
 }
