restyling. up to add members. need to polish adding modal

--- a/src/Components/UI/Events/Event/Event.module.scss
+++ b/src/Components/UI/Events/Event/Event.module.scss
@@ -12,6 +12,13 @@ $gray: #8e8e8e;
 $white: #fff;
 $black: #000;
 
+
+$FreshBlue: #4ABDAC;
+$CleanWhite: #DFDCE3;
+$VermillionRed: #FC4A1A;
+$SunshineYellow: #F7B733;
+
+
 $open-sans: 'Open Sans',
 sans-serif;
 // clear-fix mixin
