--- a/src/Components/UI/SideBar/Groups/Group/Group.module.scss
+++ b/src/Components/UI/SideBar/Groups/Group/Group.module.scss
@@ -1,11 +1,13 @@
-
 $FreshBlue: #4ABDAC;
+$CleanWhite: #DFDCE3;
+$VermillionRed: #FC4A1A;
+$SunshineYellow: #F7B733;
 .Group{
     height:50px;
     padding:0px !important;
 }
 .Divider{
-    background-color: $FreshBlue !important;
+    background-color: $VermillionRed !important;
     margin-left:45px !important;
 }
 .GroupTitle{
