--- a/src/Containers/Dashboard/Dashboard.module.scss
+++ b/src/Containers/Dashboard/Dashboard.module.scss
@@ -28,6 +28,9 @@ $CleanWhite: #DFDCE3;
     flex-grow: 1;
     margin: 12px 0px;
 }
+.bold{
+    font-weight: bold;
+}
 .MemberCount{
     width:100%;
     padding: 0px 16px;
